Redirect to https://rackoen.com

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Koen Hendriks on GitHub</title>
+    <meta http-equiv="refresh" content="2;url=https://rackoen.com" />
+    <script type="text/javascript">
+      location.href = 'https://rackoen.com';
+    </script>
+  </head>
+  <body>
+  </body>
+</html>
