DNS issue so used www instead of root domain

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Koen Hendriks on GitHub</title>
-    <meta http-equiv="refresh" content="2;url=https://rackoen.com" />
+    <meta http-equiv="refresh" content="2;url=https://www.rackoen.com" />
     <script type="text/javascript">
-      location.href = 'https://rackoen.com';
+      location.href = 'https://www.rackoen.com';
     </script>
   </head>
   <body>
